# Vellum-AML-toolkit

./: .gitignore  ARTIFACTS.md  CONTRIBUTING.md  README.md  plan.md  pyproject.toml  system_design.md
configs/: README.md  default.yaml
configs/modes/: aggressive.yaml  balanced.yaml  conservative.yaml  interpretable.yaml
configs/profiles/: advanced.yaml  balanced.yaml  conservative.yaml  research.yaml
examples/image_demo/: config_aggressive.yaml  config_balanced.yaml  setup.py
examples/tabular_demo/: config.yaml  setup.py
src/aml_toolkit/: __init__.py
src/aml_toolkit/adaptive/: __init__.py  coordinator.py
src/aml_toolkit/api/: cli.py
src/aml_toolkit/artifacts/: __init__.py  calibration_report.py  (+14 more)
src/autonomous_ml_toolkit.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: conftest.py
tests/integration/: test_e2e_sanity.py  test_pipeline_integration.py  test_v2_benchmark.py  test_v2_sanity.py
tests/unit/: test_advanced_config.py  test_artifacts.py  test_audit.py  test_calibration.py  test_candidates.py  test_cli.py  test_config.py  test_dynamic_ensemble.py  test_ensemble.py  test_enums.py  test_exceptions.py  test_experiment_planner.py  test_explainability.py  test_image_support.py  test_intake.py  test_interfaces.py  test_interventions.py  test_logging.py  test_meta_policy.py  test_orchestration.py  test_paths.py  test_plot_utils.py  test_probes.py  test_profiling.py  test_regression.py  test_run_history.py  test_runtime_decision.py  test_serialization.py  test_training_executor.py  test_uncertainty.py
(+92 files in other folders)
