[build-system]
requires = ["setuptools>=68.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-ml-toolkit"
version = "0.1.0"
description = "Autonomous Classification and Heatmap Generation Toolkit"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "scipy>=1.11",
    "imbalanced-learn>=0.11",
    "xgboost>=2.0",
    "torch>=2.0",
    "torchvision>=0.15",
    "timm>=0.9",
    "matplotlib>=3.7",
    "shap>=0.42",
    "typer>=0.9",
    "rich>=13.0",
    "joblib>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
aml-toolkit = "aml_toolkit.api.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
